[project]
dependencies = ["pandas>=2.3.3,<3", "tensorboard>=2.20.0,<3", "torchvision>=0.24.1,<0.25", "matplotlib>=3.10.8,<4"]
name = "torchleet"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytorch = ">=2.9.1,<3"
marimo = ">=0.18.4,<0.19"
torchvision = ">=0.24.1,<0.25"
